Add User management service readme